<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_day1_layout"
            android:title="@string/menu_day1_layout" />
        <item
            android:id="@+id/nav_day1_linear_layout"
            android:title="@string/menu_day1_linear_layout" />
        <item
            android:id="@+id/nav_day2_activity"
            android:title="@string/menu_day2_activity" />
        <item
            android:id="@+id/nav_day2_listview"
            android:title="@string/menu_day2_listview" />
        <item
            android:id="@+id/nav_day2_listview_advanced"
            android:title="@string/menu_day2_listview_advanced" />
        <item
            android:id="@+id/nav_day3_network_basic"
            android:title="@string/menu_day3_network_basic" />
        <item
            android:id="@+id/nav_day3_network_recyclerview"
            android:title="@string/menu_day3_network_recyclerview" />
        <item
            android:id="@+id/nav_day3_network_weather"
            android:title="@string/menu_day3_network_weather" />

    </group>
</menu>