<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_day1_layout">

    <fragment
        android:id="@+id/nav_day1_layout"
        android:name="com.example.a221121514232_nguyenthithuthao.ui.day1layout.Day1LayoutFragment"
        android:label="@string/menu_day1_layout"
        tools:layout="@layout/fragment_day1_layout" />

    <fragment
        android:id="@+id/nav_day1_linear_layout"
        android:name="com.example.a221121514232_nguyenthithuthao.ui.day1linearlayout.Day1LinearLayoutFragment"
        android:label="@string/menu_day1_linear_layout"
        tools:layout="@layout/fragment_day1_linear_layout" />

    <fragment
        android:id="@+id/nav_day2_activity"
        android:name="com.example.a221121514232_nguyenthithuthao.ui.day2activity.Day2ActivityFragment"
        android:label="@string/menu_day2_activity"
        tools:layout="@layout/fragment_day2_activity">
        <action
            android:id="@+id/action_day2ActivityFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.a221121514232_nguyenthithuthao.ui.day2activity.ProfileFragment"
        android:label="fragment_profile"
        tools:layout="@layout/fragment_profile" >
        <action
            android:id="@+id/action_profileFragment_to_editUserFragment"
            app:destination="@id/editUserFragment" />
    </fragment>

    <fragment
        android:id="@+id/editUserFragment"
        android:name="com.example.a221121514232_nguyenthithuthao.ui.day2activity.EditUserFragment"
        android:label="fragment_edit_user"
        tools:layout="@layout/fragment_edit_user" >
        <action
            android:id="@+id/action_editUserFragment_to_profileFragment"
            app:destination="@id/profileFragment" />
    </fragment>

    <fragment
        android:id="@+id/nav_day2_listview"
        android:name="com.example.a221121514232_nguyenthithuthao.ui.day2listview.Day2ListviewFragment"
        android:label="@string/menu_day2_listview"
        tools:layout="@layout/fragment_day2_listview" />

    <fragment
        android:id="@+id/nav_day2_listview_advanced"
        android:name="com.example.a221121514232_nguyenthithuthao.ui.day2listviewadvanced.Day2ListviewAdvancedFragment"
        android:label="@string/menu_day2_listview_advanced"
        tools:layout="@layout/fragment_day2_listview" />

    <fragment
        android:id="@+id/nav_day3_network_basic"
        android:name="com.example.a221121514232_nguyenthithuthao.ui.day3networkbasic.Day3NetworkBasicFragment"
        android:label="@string/menu_day3_network_basic"
        tools:layout="@layout/fragment_day3_network_basic" />

    <fragment
        android:id="@+id/nav_day3_network_recyclerview"
        android:name="com.example.a221121514232_nguyenthithuthao.ui.day3networkrecyclerview.Day3NetworkRecyclerViewFragment"
        android:label="@string/menu_day3_network_recyclerview"
        tools:layout="@layout/fragment_day3_network_recycler_view" />

    <fragment
        android:id="@+id/nav_day3_network_weather"
        android:name="com.example.a221121514232_nguyenthithuthao.ui.day3networkweather.Day3NetworkWeatherFragment"
        android:label="@string/menu_day3_network_weather"
        tools:layout="@layout/fragment_day3_network_weather" />

</navigation>